ipc/ipdl/test/ipdl/error/trans_WrongName3.ipdl
sync protocol trans_WrongName3 {

parent:
    sync Msg();
    async __delete__();

state S1:
    answer Msg goto S1;
    recv __delete__();
};
